feature(gradle): dependencias necesarias para los test.